// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectField /> should allow arbitrary values 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid focused multiple"
  >
    <div
      class="field dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 4
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to be used with a FieldControl 1`] = `
<div>
  <label
    class="junipero label invalid"
    for="name"
  >
    Name
  </label>
  <div
    class="junipero dropdown select-field dirty invalid"
    id="name"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        readonly=""
        type="text"
        value="Linda"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="junipero abstract invalid"
  >
    Enter your name
  </div>
</div>
`;

exports[`<SelectField /> should allow to clear a single value 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        readonly=""
        type="text"
        value="Item 1"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to clear a single value 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid empty"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        placeholder="Name"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to clear multiple values at once 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid focused multiple"
  >
    <div
      class="field dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to clear multiple values at once 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid empty focused multiple"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid focused multiple"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 4
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid focused multiple"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 3`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid focused multiple"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 4`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid focused multiple"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 5`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid focused multiple"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 6`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid focused multiple"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to reset the field 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        readonly=""
        type="text"
        value="David"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to reset the field 2`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        readonly=""
        type="text"
        value="John"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to search for an existing value 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid empty focused"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <input
        placeholder="Name"
        size="4"
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to search for an existing value 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid empty focused"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to search for an external value 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid empty focused"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <input
        placeholder="Name"
        size="4"
        type="text"
        value="Item"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 4
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to search for an external value 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid focused"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        readonly=""
        type="text"
        value="Item 4"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should be invalid if validation fails 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty invalid"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        readonly=""
        type="text"
        value="Item 1"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should not allow to change value when disabled 1`] = `
<div>
  <div
    class="junipero dropdown disabled select-field pristine valid"
  >
    <div
      class="field dropdown-toggle"
    >
      <input
        readonly=""
        type="text"
        value="Marc"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should render 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid empty focused"
  >
    <div
      class="field dropdown-toggle opened"
    >
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      class="junipero dropdown-menu select-menu"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should render multiple values 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid focused multiple"
  >
    <div
      class="field dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should render multiple values 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid focused multiple"
  >
    <div
      class="field dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should render multiple values 3`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid focused multiple"
  >
    <div
      class="field dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 3
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        placeholder="Name"
        size="4"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
